p2/confs/app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-one
  labels:
    app: app-one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-one
  template:
    metadata:
      labels:
        app: app-one
    spec:
      containers:
        - name: app-one
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: app-one
              mountPath: /usr/share/nginx/html
      volumes:
        - name: app-one
          configMap:
            name: app-one
---
apiVersion: v1
kind: Service
metadata:
  name: app-one
spec:
  type: ClusterIP
  selector:
    app: app-one
  ports:
    - port: 80
      targetPort: 80
