p2/confs/app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-two
  labels:
    app: app-two
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-two
  template:
    metadata:
      labels:
        app: app-two
    spec:
      containers:
        - name: app-two
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: app-two
              mountPath: /usr/share/nginx/html
      volumes:
        - name: app-two
          configMap:
            name: app-two
---
apiVersion: v1
kind: Service
metadata:
  name: app-two
spec:
  type: ClusterIP
  selector:
    app: app-two
  ports:
    - port: 80
      targetPort: 80
