p2/confs/app3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-three
  labels:
    app: app-three
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-three
  template:
    metadata:
      labels:
        app: app-three
    spec:
      containers:
        - name: app-three
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: app-three
              mountPath: /usr/share/nginx/html
      volumes:
        - name: app-three
          configMap:
            name: app-three
---
apiVersion: v1
kind: Service
metadata:
  name: app-three
spec:
  type: ClusterIP
  selector:
    app: app-three
  ports:
    - port: 80
      targetPort: 80
